Add unit synonyms API and improve Synonyms page
